[package]
name = "asn-logger"
version = "3.0.0"
edition = "2024"

[features]
default = []
test_messages = []

[dependencies]
cfg-if = "1"
log = "0.4.27"
chrono = { version = "0.4.41" }
fern = { version = "0.7.1", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.41", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"]}

[[example]]
name = "example_1"
required-features = ["test_messages"]
